Fixed the color contrast of tab items, disabled headers and item description.

--- a/theme/common.less
+++ b/theme/common.less
@@ -412,6 +412,18 @@ div.simframe > iframe {
     background: white !important;
 }
 
+.ui.secondary.inverted.menu .link.item, .ui.secondary.inverted.menu a.item {
+    color: rgba(255, 255, 255, 0.9) !important;
+}
+
+.ui.disabled.header {
+    opacity: 0.80;
+}
+
+.ui.cards > .card .meta,
+.ui.card .meta {
+    color: rgba(0, 0, 0, 0.68);
+}
 
 /*******************************
         Modal Close Icon
